# scaffolder

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  scaffolder.sh  setup.cfg  todo.txt
data/: languages.json  scaffolder.db  scaffolder.json  sqlite_constants.py  sqlite_data.py
data/licenses/: 0bsd  apache-2.0  apache-v2.0  bsd-2-clause-patent  bsd-3-clause  bsd-3-clause-clear  bsd-4-clause  download.py  isc  mit-0  ncsa  ofl-1.1  postgresql  upl-1.0  zlib
src/: constants.py  function_patterns.json  functions.py  languages.json  languages.py  licenses.py  repository.py  scaffold.py  scaffolder.json  settings.py  sqlite_constants.py  templates.json  templates.py  test.py  update.py
src/licenses/: mit
templates/fastapi_template/: database.py  main.py  utils.py
templates/fastapi_template/models/: post.py  user.py
templates/fastapi_template/routers/: post.py  user.py
templates/fastapi_template/schemas/: post.py  user.py
templates/fastapi_template/tests/: test_fastapi.py
templates/python_template/: constants.py  main.py  pyproject.toml  setup.cfg
templates/python_template/tests/: database.db  export_test.txt  import_test.txt  parser_test.py  test_base.py  test_date_utils.py  test_dictionary_operations.py  test_parser.py  test_path_operations.py  test_sample.py  test_sqlite.py  test_sqlite_connection.py  test_sqlite_item.py
templates/python_template/utils/: benchmark.py  dictionary_operations.py  directory_operations.py  file_operations.py  list_operations.py  parser.py  path_operations.py  questionary_item.py  questionary_utils.py  random.py  regedit.py  sqlite.py  sqlite_connection.py  sqlite_item.py  str_utils.py  url_utils.py
tests/: test_base.py  test_functions.py  test_languages.py  test_licenses.py  test_repository.py  test_scaffold.py  test_scaffolder.py  test_settings.py  test_setup.py  test_templates.py  test_update.py
tests/files/: LICENSE  test_scaffolder.json
tests/files/c++_test_files/: file.cpp
tests/files/java_test_files/: MainActivity.java  file.java
tests/files/language_test_files/: file.c  file.cs  file.go  file.js  file.py
tests/files/python_test_files/dir1/: file2.py
tests/java_test_files/dir1/: MainActivity.java
tests/java_test_files/dir2/: MainActivity.java
tests/python_test_files/: file.py  file2.py
tests/python_test_files/dir1/: file.py  file2.py
tests/python_test_files/dir2/: file.py  file2.py
tests/test_files/: blue.txt  file.py  updated_file.py
tests/test_files/nested/: file.py
tests/test_files/text/: file1.txt  file2.txt  file3.txt
tests/test_files2/: file.py  file2.py
utils/: cmd_utils.py  date_utils.py  dict_utils.py  file_utils.py  func_utils.py  gh_utils.py  json_utils.py  list_utils.py  parser.py  path_utils.py  random.py  sqlite.py  sqlite_connection.py  sqlite_item.py  str_utils.py  url_utils.py
