[metadata]
name = scaffolder
version = 1.0.0
author = soIipsist
description = CLI scaffolding tool designed to automatically generate projects using personalized templates.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
license = : OSI Approved :: MIT License
programming language = : Python :: 3

[options]
packages = find:
python_requires = >=3.11
include_package_data = True
install_requires = certifi==2024.6.2
	charset-normalizer==3.3.2
	idna==3.7
	numpy==1.26.4
	pandas==2.2.2
	python-dateutil==2.9.0.post0
	pytz==2024.1
	PyYAML==6.0.1
	requests==2.32.3
	six==1.16.0
	toml==0.10.2
	tzdata==2024.1
	urllib3==2.2.1
	xmltodict==0.13.0

