[metadata]
name = scaffolder
version = v1.0.0
author = soIipsist
description = CLI scaffolding tool designed to generate projects from personalized templates
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
license = : OSI Approved :: MIT License
programming language = : Python :: 3

[options]
packages = find:
python_requires = >=3.11
include_package_data = true
install_requires = pytz==2024.1
	six==1.16.0
	pyproject_hooks==1.1.0
	requests==2.32.3
	toml==0.10.2
	beautifulsoup4==4.12.3
	urllib3==2.2.1
	idna==3.7
	xmltodict==0.13.0
	certifi==2024.6.2
	soupsieve==2.5
	numpy==1.26.4
	packaging==24.1
	tzdata==2024.1
	build==1.2.1
	python-dateutil==2.9.0.post0
	charset-normalizer==3.3.2
	PyYAML==6.0.1
	pandas==2.2.2

