[project]
name = "python-template"
version = "0.0.1"
description = "Description"
authors = [
    {name = "author"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.6"
dependencies = ["wget"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"